--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <p class="hero-description">
         It's time to add the fastest and most special bot ever !
       </p>
-      <button class="hero-btn">
-        Add to server
-      </button>
+    <a href="https://example.com" class="hero-btn">
+  Add to server
+</a>
     </header>
     
     <div class="time-load-section">
