--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
         To discover more and more
 
       </p>
-        <button class="s-m-btn">
-          ADD TO SERVER
-        </button>
+<a href="https://example.com" class="s-m-btn">
+  ADD TO SERVER
+</a>
         <button class="s-m-btn-2">
           LOGIN
         </button>
