--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p class="hero-description">
         It's time to add the fastest and most special bot ever !
       </p>
-    <a href="https://example.com" class="hero-btn">
+    <a href="https://discord.gg/TeFSDdRq" class="hero-btn">
   Add to server
 </a>
     </header>
@@ -177,8 +177,8 @@
         To discover more and more
 
       </p>
-<a href="https://example.com" class="s-m-btn">
-  ADD TO SERVER
+<a href="https://discord.gg/TeFSDdRq" class="s-m-btn">
+  ADD TO BOT
 </a>
         <button class="s-m-btn-2">
           LOGIN
