Update Discord invite link in index.html
رابط البوت

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p class="hero-description">
         It's time to add the fastest and most special bot ever !
       </p>
-    <a href="https://discord.gg/TeFSDdRq" class="hero-btn">
+    <a href="https://discord.gg/8e2d2vWD" class="hero-btn">
   Add to server
 </a>
     </header>
