Update Discord links and button text in index.html
s

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <p class="hero-description">
         It's time to add the fastest and most special bot ever !
       </p>
-    <a href="https://discord.gg/8e2d2vWD" class="hero-btn">
-  Add to server
+    <a href="https://discord.com/oauth2/authorize?client_id=1450542942656925757&permissions=8&integration_type=0&scope=bot" class="hero-btn">
+  Add to BOT
 </a>
     </header>
     
@@ -178,7 +178,7 @@
 
       </p>
 <a href="https://discord.gg/8e2d2vWD" class="s-m-btn">
-  ADD TO BOT
+  ADD TO server
 </a>
         <button class="s-m-btn-2">
           LOGIN
